then you win. –- Mahatma Gandhi

Tue, Feb 17, 2008
---------------------------------------------------------------------
- Refactored styles, added [Campaign] to [Lead] and [Opportunity] landing pages.
- Added [Contacts] and [Opportunities] to [Account] landing page.
- Added [Accounts] and [Opportunities] to [Contact] landing page.
- Added [Accounts] and [Campaigns] to [Opportunity] landing page.

Mon, Feb 16, 2008
---------------------------------------------------------------------
- Save shown/hidden state of [post a note] form for all commentable models.
- Updated controller and view specs to support commentables.
- Added comments fixture to generate sample comments for all the core models.

Sun, Feb 15, 2008
---------------------------------------------------------------------
- Implemented adding notes for campaign.
- Added notes for other core models (Account, Contact, Lead, and Opportunity).

Sat, Feb 14, 2008
---------------------------------------------------------------------
- More design work on campaign landing page (adding comments, etc.)

Fri, Feb 13, 2008
---------------------------------------------------------------------
- Implemented Campaign Summary sidebar for the campaign landing page.
- Generated [Comment] scaffold and created database migration.
- Added [acts_as_commentable] to core models.
- Added visible/invisible helpers to flip element's visibility style.

Thu, Feb 12, 2008
---------------------------------------------------------------------
- Installed [acts_as_commentable] plugin.
- More work designing simple and consistent landing pages.

Wed, Feb 11, 2008
---------------------------------------------------------------------
- Researching and mocking up landing pages for campaigns and leads.

Tue, Feb 10, 2008
---------------------------------------------------------------------
- Implemented creating and assigning tasks for the specific date from the calendar.

Mon, Feb 9, 2008