@@ -1,8 +1,0 @@
-:javascript
-  if ($$("form") != "") {
-    var first_element = $$("form")[0].findFirstElement();
-    if (first_element) {
-      first_element.focus();
-      first_element.value = first_element.value;
-    }
-  }
