@@ -19,4 +19,4 @@
     - else
       = render :partial => "layouts/tabbed"
       = render :partial => "layouts/footer"
-    = yield(:javascript_epilogue) || render(:partial => "common/set_focus")
+    = yield(:javascript_epilogue)
